--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -253,6 +253,11 @@ config GENERIC_ISA_DMA
 	def_bool y
 	depends on ISA_DMA_API
 
+config GENERIC_CSUM
+	bool
+	default y if KMSAN
+	default n
+
 config GENERIC_BUG
 	def_bool y
 	depends on BUG
